--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      ...
+      <div class="swiper-slide"><img src="img/IMG_2859.JPG" alt=""></div>
+      <div class="swiper-slide"><img src="img/IMG_2860.JPG" alt=""></div>
+      <div class="swiper-slide"><img src="img/IMG_2861.JPG" alt=""></div>
+      <div class="swiper-slide"><img src="img/IMG_2862.JPG" alt=""></div>
+      <div class="swiper-slide"><img src="img/IMG_2864.JPG" alt=""></div>
+
     </div>
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
@@ -27,7 +29,7 @@
     <div class="swiper-button-next"></div>
   
     <!-- If we need scrollbar -->
-    <div class="swiper-scrollbar"></div>
+    <!-- <div class="swiper-scrollbar"></div> -->
 </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
