--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
     <title>Swiper</title>
 </head>
 <body>
-    <!-- Slider main container -->
-<div class="swiper">
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide"><img src="img/IMG_2859.JPG" alt=""></div>
-      <div class="swiper-slide"><img src="img/IMG_2860.JPG" alt=""></div>
-      <div class="swiper-slide"><img src="img/IMG_2861.JPG" alt=""></div>
-      <div class="swiper-slide"><img src="img/IMG_2862.JPG" alt=""></div>
-      <div class="swiper-slide"><img src="img/IMG_2864.JPG" alt=""></div>
+<!-- Slider main container -->
+<div class="wrapper">
+    <h1 class="wrapper__title">Slider Swiper</h1>
+    <div class="swiper">
+        <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="img/01.jpg" alt="img"></div>
+        <div class="swiper-slide"><img src="img/02.jpg" alt="img"></div>
+        <div class="swiper-slide"><img src="img/03.jpg" alt="img"></div>
+        <div class="swiper-slide"><img src="img/04.jpg" alt="img"></div>
+        <div class="swiper-slide"><img src="img/05.jpg" alt="img"></div>
+        </div>
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
 
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+    
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
     </div>
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
-  
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-  
-    <!-- If we need scrollbar -->
-    <!-- <div class="swiper-scrollbar"></div> -->
 </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
