--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <h1 class="wrapper__title">Slider Swiper</h1>
     <div class="swiper">
         <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="img/01.jpg" alt="img"></div>
-        <div class="swiper-slide"><img src="img/02.jpg" alt="img"></div>
-        <div class="swiper-slide"><img src="img/03.jpg" alt="img"></div>
-        <div class="swiper-slide"><img src="img/04.jpg" alt="img"></div>
-        <div class="swiper-slide"><img src="img/05.jpg" alt="img"></div>
+            <!-- Хеш навігація: -->
+        <div data-hash="slide-1" class="swiper-slide"><img src="img/01.jpg" alt="img"></div>
+        <div data-hash="slide-2" class="swiper-slide"><img src="img/02.jpg" alt="img"></div>
+        <div data-hash="slide-3" class="swiper-slide"><img src="img/03.jpg" alt="img"></div>
+        <div data-hash="slide-4" class="swiper-slide"><img src="img/04.jpg" alt="img"></div>
+        <div data-hash="slide-5" class="swiper-slide"><img src="img/05.jpg" alt="img"></div>
+        <div data-hash="slide-6" class="swiper-slide"><img src="img/06.jpg" alt="img"></div>
+        <div data-hash="slide-7" class="swiper-slide"><img src="img/07.jpg" alt="img"></div>
         </div>
         <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
