--- a/index.html
+++ b/index.html
@@ -33,6 +33,36 @@
         <!-- If we need scrollbar -->
         <div class="swiper-scrollbar"></div>
     </div>
+
+    <div class="text-break">Певний розділяючий обʼєкт</div>
+
+    <div class="text">
+        <div class="swiper-wrapper">
+            <!-- Хеш навігація: -->
+            <div class="swiper-slide">
+                <h2>Slide #1</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+            <div class="swiper-slide">
+                <h2>Slide #2</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+            <div class="swiper-slide">
+                <h2>Slide #3</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+            <div class="swiper-slide">
+                <h2>Slide #4</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+            <div class="swiper-slide">
+                <h2>Slide #5</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+            <div class="swiper-slide">
+                <h2>Slide #6</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+            <div class="swiper-slide">
+                <h2>Slide #7</h2>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eligendi ipsa sed laudantium alias repudiandae unde sapiente delectus ea, delenit!</div>
+        </div>
+
+    </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
